[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/Supermolot Light.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/LevelComplete/BonusPoints.gd" type="Script" id=2]
[ext_resource path="res://Game/LevelComplete/LevelCompleteBonusPoints.gd" type="Script" id=3]
[ext_resource path="res://Pickups/Point/Sprites/Silver_coin.png" type="Texture" id=4]
[ext_resource path="res://Pickups/Point/Sprites/Bronze_coin.png" type="Texture" id=5]
[ext_resource path="res://Pickups/Point/Sprites/Gold_coin.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="BonusPoints" type="HBoxContainer"]
margin_top = 49.0
margin_right = 483.0
margin_bottom = 130.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 428.0
margin_bottom = 81.0
size_flags_horizontal = 3
alignment = 1

[node name="Text" type="Label" parent="VBoxContainer"]
margin_right = 428.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bonus Points"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 428.0
margin_bottom = 81.0

[node name="Point1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
stretch_mode = 3

[node name="Point2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="Point3" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Point4" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Point5" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Points" type="Label" parent="."]
margin_left = 432.0
margin_top = 18.0
margin_right = 483.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "%s"
align = 2
script = ExtResource( 3 )
